KCIRB-204 & KCIRB-204 & KCIRB-208 changes for versioning and anon keys